# SwClock

./: .gitignore  CMakeLists.txt  CMakePresets.json  COMMERCIAL_DEPLOYMENT_SUMMARY.md  IEEE_AUDIT  IMPLEMENTATION_GAP_ANALYSIS.md  INTEGRATION.txt  PERFORMANCE.txt  PERFORMANCE_VALIDATION_PROOF.md  README.md  REC10_IMPLEMENTATION.md  TEST_FIXES_SUMMARY.md  TODO.txt  build.sh  performance.sh  setup.sh  test.sh  test_parallel_speedup.sh  test_results.txt  uncertainty_budget.json
docs/: COMMERCIAL_LOGGING.md  IEEE_AUDIT  LINUX_COMPATIBILITY.md  METRICS_REFERENCE.md  PERFORMANCE.md  PERFORMANCE_TESTING.md  README.md  STANDARDS_REFERENCE.md  UNCERTAINTY_BUDGET.md  USER_GUIDE.md
gtests/: aekf_servo_swclock_tests.cpp  aekf_servo_wifi_tests.cpp  akf_servo_swclock_tests.cpp  akf_servo_wifi_tests.cpp  compare_wifi_tests.cpp  ekf_servo_swclock_tests.cpp  ekf_servo_wifi_tests.cpp  kf_servo_swclock_tests.cpp  kf_servo_wifi_tests.cpp  sw_clock_test_whitepaper.md  test_swclock.cpp  tests_performance.cpp  tests_sw_clock.cpp
resources/schemas/: swclock-log-v1.0.0.json
scripts/: build.sh  performance.sh  run_4h_performance.sh  setup.sh  test.sh
src/: sweep_compare_wifi.cpp
src-gtests/: sw_clock_test_methodology.md  test_metadata.cpp  test_metadata.h  tests_performance.cpp  tests_sw_clock.cpp
src-tools/: README.md  debug_monitor.c  monitor_demo.c  test_jsonld_logger.c  test_swclock_te.c  test_te_calc.c
src/aekf_servo/: aekf_servo.c  aekf_servo.h
src/akf_servo/: akf_servo.c  akf_servo.h
src/ekf_servo/: ekf_servo.c  ekf_servo.h
src/kf_servo/: kf_servo.c  kf_servo.h
src/mix_servo/: mix_servo_README.md
src/mix_servo/src/servo/: mix_servo.c  mix_servo.h
src/pi_servo/: pi_servo.c  pi_servo.h
src/sw_clock/: README.md  sw_adjtimex.c  sw_adjtimex.h  sw_clock.c  sw_clock.c.bak  sw_clock.c.bak2  sw_clock.c.bak3  sw_clock.h  sw_clock_commercial_log.c  sw_clock_commercial_log.h  sw_clock_constants.h  sw_clock_events.c  sw_clock_events.h  sw_clock_monitor.c  sw_clock_monitor.h  sw_clock_ringbuf.c  sw_clock_ringbuf.h  sw_clock_structured_log.c  sw_clock_structured_log.h  sw_clock_utilities.c  sw_clock_utilities.h  swclock.c  swclock.h  swclock_compat.c  swclock_compat.h  swclock_jsonld.c  swclock_jsonld.c.backup  swclock_jsonld.h
tools/: analyze_performance_logs.py  analyze_swclock_logs.py  benchmark_metrics.py  cache_utils.py  compare_performance.py  compare_wifi_analyze.py  generate_performance_report.py  ieee_metrics.py  log_integrity.py  plot_aekf_wifi_perf.py  plot_akf_wifi_perf.py  plot_ekf_wifi_perf.py  plot_kf_wifi_perf.py  plot_latest_perf.sh  read_performance_csv.py  requirements.txt  sif_validate.py  swclock_commercial_validator.py  swclock_event_dump.c  sweep_analyze.py  test_allan_deviation.py  test_output_parser.py  uncertainty_analysis.py  validate_metrics.py  validate_test.py  validate_test_run.py
